--- a/style.css
+++ b/style.css
@@ -83,3 +83,13 @@ main p {
         gap: 20px;
     }
 }
+
+@media screen and (min-width: 1280px) {
+    main {
+        min-width: 1280px;
+    }
+
+    .container {
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
